--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="custom.css">
   <title>Frontend Mentor | QR code component</title>
-
   <style>
     .attribution {
       font-size: 11px;
       text-align: center;
     }
-
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
   </style>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by Mateen Rajput.
-    </div>
 </head>
-
 <body>
   <main>
     <div class="blue-card material-background"></div>
@@ -33,10 +24,12 @@
     <div class="white-card">
       <div class="qr-code"></div>
       <div class="text">Improve your Front-end Skills by building projects</div>
-      <div class="sub-text">Scan the QR code to visit the Forntend Mentor and take your coding skills to the next level!
-      </div>
+      <div class="sub-text">Scan the QR code to visit the Forntend Mentor and take your coding skills to the next level!</div>
     </div>
-
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by Mateen Rajput.
+    </div>
+  </main>
 </body>
-
 </html>
